argocd/waiter/deb-mirror/resources.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deb-mirror
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deb-mirror
spec:
  template:
    spec:
      containers:
        - name: app
          image: varnish:fresh
          volumeMounts:
            - name: vanish-data
              mountPath: /var/lib/varnish
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
          livenessProbe:
            httpGet:
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
            limits:
              cpu: 100m
              memory: 2Gi
        - name: proxy
          image: caddy:latest
          volumeMounts:
            - name: config
              subPath: Caddyfile
              mountPath: /etc/caddy/Caddyfile
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http-proxy
              containerPort: 8081
          readinessProbe:
            httpGet:
              port: 8081
          livenessProbe:
            httpGet:
              port: 8081
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
      securityContext:
        fsGroup: 1337
      volumes:
        - name: config
          configMap:
            name: deb-mirror-config
        - name: vanish-data
          emptyDir: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deb-mirror
spec:
  hostnames:
    - mirror.snucse.org
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-snucse-org
    # allow plain HTTP
    - namespace: cilium-system
      name: web-gateway
      sectionName: http
  rules:
    - backendRefs:
        - name: deb-mirror
          port: 80
